Spacing/alignment fixes + wording changes
textplan.html
- Elements reordered
- Bottom button text updated to "Call Us Today!"
- Text sizes/styles more aligned with other pages
- Other wording and text changes

Link to vitamin K information added to dropdown on nav-bar with instructions on how to add more links in the future

Button alignment fixed on index.html

links on blog post 1 updated

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ h6.button {
 
 .navbar .nav-item .dropdown-menu.show {
     opacity: 1;
-    max-height: 76px;
+    max-height: 112px;
     visibility: visible;
     transform: translateY(0);
 }
